--- a/galeria-front/.env
+++ b/galeria-front/.env
@@ -1,5 +1,4 @@
-VITE_GALLERY_API_URL=http://54.233.50.202:3333
-VITE_BOT_API_URL=http://192.168.0.12:8001
+VITE_GALLERY_API_URL=http://54.233.50.202/api
+VITE_PUBLIC_HOST=http://54.233.50.202
 VITE_S3_BUCKET_NAME=galeria-picbrand
 VITE_AWS_REGION=sa-east-1
-VITE_PUBLIC_HOST=http://54.233.50.202:3333
